[tool.poetry]
name = "hh-projects"
version = "0.1.0"
description = ""
authors = ["Viktor Bochagov <vitekbochagov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.15.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
